0.3.0
 - feat: new options for sinogram generation
   - measurement duration (or specific times per angle)
   - specify simulated imaging modalities
0.2.1
 - ref: migrate to flimage
0.2.0
 - feat: add option to roll rotational axis (in-plane) during
   sinogram generation
 - feat: add capability to track progress of sinogram generation
 - feat: add possibility to add (random) displacements for each
   sinogram slice
 - fix: medium index not stored in exported sinogram file
0.1.0
 - add basic example to docs 
 - drawing refractive index and fluorescence phantoms
 - sinogram generation
 - basic functionalities (sphere element):
   - simple cell phantom
   - propagators: Rytov and projection
   - fluorescence projector
0.0.1
 - initial setup